--- a/app/src/main/res/layout-land/activity_movie_details.xml
+++ b/app/src/main/res/layout-land/activity_movie_details.xml
@@ -14,6 +14,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="0dp"
+        android:onClick="onClick"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
